# fks_training

./: .dockerignore  .gitignore  .gitmodules  DOCKERFILE_SELECTION.md  Dockerfile  Dockerfile.old  Dockerfile.optimized  Dockerfile.optimized-shared  Dockerfile.simple.gpu  MLproject.yaml  README.md  conda.yaml  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.sh
docker/: Dockerfile
src/: __init__.py  dataset_manager.py  gpu_manager.py  main.py  pyproject.toml  service.py  training_types.py  types.py
src/domain/ml/ethics/: __init__.py  bias_detection.py  explainability.py
src/domain/ml/features/: __init__.py  indicators.py  preprocessing.py
src/domain/ml/models/cnn_lstm/: __init__.py  model.py
src/domain/ml/models/lstm/: __init__.py  model.py
src/domain/ml/models/transformer/: __init__.py  model.py
src/domain/ml/monitoring/: __init__.py  drift_detector.py  performance_monitor.py
src/domain/ml/rl/: __init__.py  environment.py  train_rl.py
src/domain/ml/training/: __init__.py  deploy.py  evaluate.py  train.py
src/framework/services/: template.py
src/infrastructure/: __init__.py  data_client.py
src/models/: baselines.py  time_series_cv.py
src/pipelines/: __init__.py  base.py  ensemble.py  pipeline.py  reinforcement.py  supervised.py
src/ppo/: __init__.py  data_collection.py  env_wrapper.py  evaluate_model.py  evaluation.py  feature_extractor.py  networks.py  policy_network.py  trading_env.py  train_trading_ppo.py  trainer.py  training_loop.py
src/shared_python/: __init__.py  exceptions.py  logging.py  types.py
(+37 files in other folders)
