[project]
name = "fks_training"
version = "0.1.0"
description = "FKS Model Training Service"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = ["FKS <nunie.smith01@gmail.com>"]

dependencies = [
  "numpy",
  "pandas",
  "shared_python @ file://../../../shared/shared_python",
  "scikit-learn",
  "xgboost",
  "catboost",
]

[project.optional-dependencies]
ml = ["scikit-learn", "torch"]
gpu = ["torch" ]
explain = ["shap"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
